--- a/app/templates/app/flat/home.html
+++ b/app/templates/app/flat/home.html
@@ -93,7 +93,9 @@
             .contact-card {
                 border: none;
             }
-
+            .special-item {
+                min-width: 100%;
+            }
             .desktop-nav {
                 display: none;
             }
