--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -67,7 +67,7 @@
             <div class="col-lg-4 col-12">
                 <div class="card shadow-1 h-100 m-1">
                     <div class="card-header"></div>
-                    <div class="card-body" style="min-width: 450px">
+                    <div class="card-body" style="max-width: auto">
                         <canvas id="chart1"></canvas>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
             <div class="col-lg-4 col-12">
                 <div class="card shadow-1 h-100 m-1">
                     <div class="card-header"></div>
-                    <div class="card-body" style="min-width: 450px">
+                    <div class="card-body" style="max-width: auto">
                         <canvas id="chart2"></canvas>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="card-header text-center">
                         Основные недостатки
                     </div>
-                    <div class="card-body" style="min-width: 450px;">
+                    <div class="card-body" style="width: auto">
                         <canvas id="chart3"></canvas>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="card-header text-center">
                         Рекомендация
                     </div>
-                    <div class="card-body" style="min-width: 450px">
+                    <div class="card-body" style="max-width: auto">
                         <p>
                             Предпологаемая продолжительность жизни: <b>{{ last_duration }} лет</b><br>
                             Предпологаемая продолжительность жизни (при исправлении): <b>{{ improved_duration }} лет</b><br>
