--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -31,7 +31,7 @@
             <div class="col-12 col-sm-4">
                 <div class="card">
                     <div class="card-header text-center">
-                        <h4 class="text-warning">Ежемесячная</h4>
+                        <h4 class="text-warning">Разовый</h4>
                     </div>
                     <div class="card-body text-center">
                         299 рублей / месяц
@@ -47,7 +47,7 @@
             <div class="col-12 col-sm-4">
                 <div class="card">
                     <div class="card-header text-center">
-                        <h4 class="text-warning">Ежегодная</h4>
+                        <h4 class="text-warning">Годовой</h4>
                     </div>
                     <div class="card-body text-center">
                         2990 рублей / месяц <span class="text-danger">(-17%)</span>
@@ -59,6 +59,12 @@
                         </a>
                     </div>
                 </div>
+            </div>
+            <div class='subs-info'>Выберите удобный тариф разовый (299 рублей) , годовой (2990 рублей)  или приведите 5 друзей по реферальной ссылке из <a href="{% url 'app:cabinet'%}"> личного кабинета</a> и получите бесплатную подписку на 1 год.
+                <br> 
+                Приобретение подписки позволит рассчитать предполагаемую продолжительность жизни на момент проведения тестирования; выявить показатели, требующие коррекции для увеличения продолжительности жизни;
+                 активирует функцию динамического наблюдения за изменением показателей;
+                 активирует формирование рекомендаций, осуществляемых искусственным интеллектом на основе тестирования (носит рекомендательный характер).
             </div>
         </div>
     {% else %}
