--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -172,7 +172,13 @@ strong {
             transform: scale3d(0.3, 0.3, 0.3);
   }
 }
-
+.subs-info {      
+  align-items: center;     
+  text-align: center;
+  color: black;
+  padding: 10px;
+  background-color: #f5f5f5;  
+}
 @keyframes anim-close-card {
   100% {
     opacity: 0.3;
