--- a/app/templates/app/include/user_quiz/table.html
+++ b/app/templates/app/include/user_quiz/table.html
@@ -2,6 +2,7 @@
     <thead>
     <tr>
         <th>№</th>
+        <th>E-mail</th>
         <th>Тест</th>
         <th>Дата прохождения</th>
         <th>Вопросы</th>
@@ -14,6 +15,7 @@
     {% for user_quiz in user_quizzes %}
         <tr>
             <td>{{ forloop.counter }}</td>
+            <td>{{ user_quiz|default:'' }}</td>
             <td>{{ user_quiz.quiz.name }}</td>
             <td>{{ user_quiz.created_at|date:'d.m.Y H:i' }}</td>
             <td>{{ user_quiz.user_answers.count }} / {{ user_quiz.quiz.questions.count }}</td>
@@ -34,10 +36,10 @@
                     </svg>
                 </a>
                 <a href="{% url 'app:quiz_detail' user_quiz.id %}" class="m-2">
-                    <i class="fa fa-eye text-success"></i>
+                    <i class="fa fa-eye text-success"  style="vertical-align: 20%;"></i>
                 </a>
                 <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2">
-                    <i class="fa fa-download text-warning"></i>
+                    <i class="fa fa-download text-warning align-top"></i>
                 </a>
             </td>
         </tr>
