--- a/landing/templates/landing/include/about.html
+++ b/landing/templates/landing/include/about.html
@@ -9,7 +9,7 @@
     </p>
     <hr color="grey" style="margin: 20px auto;">
     <ul class="project-item-cards">
-        <li>
+        <li class="special-item">
             <div class="project-item-card">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                      stroke-width="1.5"
@@ -21,7 +21,7 @@
                 Предполагаемая продолжительность жизни на момент проведения тестирования
             </div>
         </li>
-        <li>
+        <li class="special-item">
             <div class="project-item-card">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                      stroke-width="1.5"
@@ -35,7 +35,7 @@
             </div>
 
         </li>
-        <li>
+        <li class="special-item">
             <div class="project-item-card">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                      stroke-width="1.5"
@@ -43,7 +43,6 @@
                     <path stroke-linecap="round" stroke-linejoin="round"
                           d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0 1 18 16.5h-2.25m-7.5 0h7.5m-7.5 0-1 3m8.5-3 1 3m0 0 .5 1.5m-.5-1.5h-9.5m0 0-.5 1.5m.75-9 3-3 2.148 2.148A12.061 12.061 0 0 1 16.5 7.605"/>
                 </svg>
-
                 Возможность динамического наблюдения за изменением показателей
             </div>
         </li>
