--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -60,6 +60,23 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-sm-4">
+                <div class="card-header text-center">
+                    <h4 class="text-warning">Акция</h4>
+                </div>
+                <div style="display: flex; flex-direction: column; justify-content: space-between; height: 90%">
+                    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; width: 100%;">
+                        <div class="card-body text-center">
+
+                            <b>0 рублей</b>
+                            
+                        </div>
+                        <div class="card-footer">
+                            <span>*Если привести 5 человек</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class='subs-info'>Выберите удобный тариф разовый (299 рублей) , годовой (2990 рублей)  или приведите 5 друзей по реферальной ссылке из <a href="{% url 'app:cabinet'%}"> личного кабинета</a> и получите бесплатную подписку на 1 год.
                 <br> 
                 Приобретение подписки позволит рассчитать предполагаемую продолжительность жизни на момент проведения тестирования; выявить показатели, требующие коррекции для увеличения продолжительности жизни;
