--- a/landing/templates/landing/flat/home.html
+++ b/landing/templates/landing/flat/home.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(97976463, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/97976463" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <title>Главная</title>
     <link rel="stylesheet" href="{% static 'landing/css/main.css' %}">
     <script src="{% static 'landing/js/app.js' %}" defer=""></script>
@@ -431,6 +448,16 @@
                 margin-bottom: 0;
             }
 
+            .section-tariffs {
+                height: 1150px;
+                padding: 100px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-size: cover;
+                background-color: #f8f8f8;
+            {#background-color: #dafae5;#}
+            }
 
             .card-about {
                 opacity: 90%;
@@ -603,7 +630,7 @@
             </div>
             <div class="card subscription-card">
                 <div class="card-header text-center">
-                    <span style="color: #db6a38">Годовой</span>
+                    <span style="color: #db6a38">Акция</span>
                 </div>
                 <hr style="margin: 10px auto">
                 <div style="display: flex; flex-direction: column; justify-content: space-between; height: 90%">
@@ -640,19 +667,18 @@
             </h1>
 
             <hr color="grey" style="margin: 20px">
-            <table style="align-items: center; width: 100%; margin-left:7.5%;">
-                <tbody>
-
-                <tr>
-                    <th style="text-align: left;">Телефон:</th>
-                    <td >+7 909 184 6111</td>
-                </tr>
-                <tr>
-                    <th style="text-align: left;">Почта:</th>
-                    <td>e.v.chesnokov@me.com</td>
-                </tr>
-                </tbody>
-            </table>
+            <div style="text-align: center;">
+                <table style="margin: 0 auto; text-align: left;font-weight: bold;">
+                    <tbody>
+                        <tr>
+                            <td><strong>Телефон:</strong> <a href="tel:+79091846111" style="color: inherit; text-decoration: none;">+7 909 184 6111</a></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Почта:</strong> <a href="mailto:e.v.chesnokov@me.com" style="color: inherit; text-decoration: none;">e.v.chesnokov@me.com</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <span class="colus-regular"
                   style="display:block; text-align: center; color: black; margin-top: 15px">либо</span>
             <div style="display: flex; justify-content: center" class="social">
