--- a/app/templates/app/include/user_quiz/table.html
+++ b/app/templates/app/include/user_quiz/table.html
@@ -36,9 +36,15 @@
                 <a href="{% url 'app:quiz_detail' user_quiz.id %}" class="m-2">
                     <i class="fa fa-eye text-success"  style="vertical-align: 20%;"></i>
                 </a>
-                <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2" dowland>
+                {% if is_active_subscriptions %}
+                <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2" download>
                     <i class="fa fa-download text-warning align-top"></i>
                 </a>
+                {% else %}
+                <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2">
+                    <i class="fa fa-download text-warning align-top"></i>
+                </a>
+                {% endif %}
             </td>
         </tr>
     {% endfor %}
