--- a/app/templates/app/include/user_quiz/table-admin.html
+++ b/app/templates/app/include/user_quiz/table-admin.html
@@ -40,7 +40,7 @@
               <a href="{% url 'app:quiz_detail' user_quiz.id %}" class="m-2">
                   <i class="fa fa-eye text-success"  style="vertical-align: 20%;"></i>
               </a>
-              <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2" dowland>
+              <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2" download>
                   <i class="fa fa-download text-warning align-top"></i>
               </a>
           </td>
