--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -68,11 +68,11 @@
                     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; width: 100%;">
                         <div class="card-body text-center">
 
-                            <b>0 рублей</b>
+                            <b>0 рублей/год*</b>
                             
                         </div>
                         <div class="card-footer">
-                            <span>*Если привести 5 человек</span>
+                            <span>* после оплаты разовой подписки открывается возможность получения годовой подписки, если 5 человек зарегистрируется по вашей персональной реферальной ссылке из личного кабинета</span>
                         </div>
                     </div>
                 </div>
