--- a/landing/templates/landing/flat/home.html
+++ b/landing/templates/landing/flat/home.html
@@ -280,6 +280,7 @@
         }
 
         .section-tariffs {
+            max-width: 1280px
             height: auto;
             padding: 100px;
             display: flex;
@@ -288,6 +289,11 @@
             background-size: cover;
             background-color: #f8f8f8;
         {#background-color: #dafae5;#}
+        }
+
+        .tariff-text { 
+            font-size: 1.2em ;
+       
         }
 
         .section-about {
@@ -457,6 +463,11 @@
                 background-size: cover;
                 background-color: #f8f8f8;
             {#background-color: #dafae5;#}
+            }
+
+            .tariff-text { 
+                font-size: 12.8px;
+           
             }
 
             .card-about {
@@ -639,20 +650,19 @@
                     </div>
                     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; width: 100%;">
                         <div style="width: 100%; color: #0b2e13;">
-                            <span style="font-size: 12px">*Если привести 5 человек</span>
+                            <span style="font-size: 12px">* после оплаты разовой подписки открывается возможность получения годовой подписки, если 5 человек зарегистрируется по вашей персональной реферальной ссылке из личного кабинета</span>
                             <hr style="margin: 10px auto">
-                            <b>0 рублей</b>
+                            <b>0 рублей/год*</b>
                         </div>
                     </div>
                 </div>
             </div>
             
         </div>
-        <div class='card subs-info'>Выберите удобный тариф разовый (299 рублей) , годовой (2990 рублей)  или приведите 5 друзей по реферальной ссылке из <a href="{% url 'app:cabinet'%}"> личного кабинета</a> и получите бесплатную подписку на 1 год.
+        
+        <div  class=' subs-info poiret-one-regular bold'> <p class='bold tariff-text'>Выберите удобный тариф разовый (299 рублей) , годовой (2990 рублей) или оплатите разовую подписку, приведите 5 друзей по <a href="{% url 'app:cabinet'%}">реферальной ссылке</a> из личного кабинета и получите бесплатную подписку на 1 год.
             <br> 
-            Приобретение подписки позволит рассчитать предполагаемую продолжительность жизни на момент проведения тестирования; выявить показатели, требующие коррекции для увеличения продолжительности жизни;
-             активирует функцию динамического наблюдения за изменением показателей;
-             активирует формирование рекомендаций, осуществляемых искусственным интеллектом на основе тестирования (носит рекомендательный характер).
+            Приобретение подписки позволит рассчитать предполагаемую продолжительность жизни на момент проведения тестирования; выявить показатели, требующие коррекции для увеличения продолжительности жизни; активирует функцию динамического наблюдения за изменением показателей; активирует формирование рекомендаций, осуществляемых искусственным интеллектом на основе тестирования (носит рекомендательный характер).</p>
         </div>
     </div>
 </section>
